JavaScript/JavaScriptParser/JavaScriptParser.cs
// $ANTLR 3.1.2 JavaScript.g 2009-06-19 16:33:36

// The variable 'variable' is assigned but its value is never used.
#pragma warning disable 168, 219
// Unreachable code detected.
#pragma warning disable 162

using System.Diagnostics;


using System;
using Antlr.Runtime;
using IList 		= System.Collections.IList;
using ArrayList 	= System.Collections.ArrayList;
using Stack 		= Antlr.Runtime.Collections.StackList;

using IDictionary	= System.Collections.IDictionary;
using Hashtable 	= System.Collections.Hashtable;

public partial class JavaScriptParser : Parser
{
    public static readonly string[] tokenNames = new string[] 
	{
        "<invalid>", 
		"<EOR>", 
		"<DOWN>", 
		"<UP>", 
		"LT", 
		"Identifier", 
		"StringLiteral", 
		"NumericLiteral", 
		"DoubleStringCharacter", 
		"SingleStringCharacter", 
		"EscapeSequence", 
		"CharacterEscapeSequence", 
		"HexEscapeSequence", 
		"UnicodeEscapeSequence", 
		"SingleEscapeCharacter", 
		"NonEscapeCharacter", 
		"EscapeCharacter", 
		"DecimalDigit", 
		"HexDigit", 
		"DecimalLiteral", 
		"HexIntegerLiteral", 
		"ExponentPart", 
		"IdentifierStart", 
		"IdentifierPart", 
		"UnicodeLetter", 
		"UnicodeDigit", 
		"Comment", 
		"LineComment", 
		"WhiteSpace", 
		"'function'", 
		"'('", 
		"','", 
		"')'", 
		"'{'", 
		"'}'", 
		"'var'", 
		"';'", 
		"'='", 
		"'if'", 
		"'else'", 
		"'do'", 
		"'while'", 
		"'for'", 
		"'in'", 
		"'continue'", 
		"'break'", 
		"'return'", 
		"'with'", 
		"':'", 
		"'switch'", 
		"'case'", 
		"'default'", 
		"'throw'", 
		"'try'", 
		"'catch'", 
		"'finally'", 
		"'new'", 
		"'['", 
		"']'", 
		"'.'", 
		"'*='", 
		"'/='", 
		"'%='", 
		"'+='", 
		"'-='", 
		"'<<='", 
		"'>>='", 
		"'>>>='", 
		"'&='", 
		"'^='", 
		"'|='", 
		"'?'", 
		"'||'", 
		"'&&'", 
		"'|'", 
		"'^'", 
		"'&'", 
		"'=='", 
		"'!='", 
		"'==='", 
		"'!=='", 
		"'<'", 
		"'>'", 
		"'<='", 
		"'>='", 
		"'instanceof'", 
		"'<<'", 
		"'>>'", 
		"'>>>'", 
		"'+'", 
		"'-'", 
		"'*'", 
		"'/'", 
		"'%'", 
		"'delete'", 
		"'void'", 
		"'typeof'", 
		"'++'", 
		"'--'", 
		"'~'", 
		"'!'", 
		"'this'", 
		"'null'", 
		"'true'", 
		"'false'"
    };

    public const int LT = 4;
    public const int T__29 = 29;
    public const int DecimalDigit = 17;
    public const int EOF = -1;
    public const int Identifier = 5;
    public const int SingleStringCharacter = 9;
    public const int T__93 = 93;
    public const int T__94 = 94;
    public const int T__91 = 91;
    public const int T__92 = 92;
    public const int T__90 = 90;
    public const int Comment = 26;
    public const int SingleEscapeCharacter = 14;
    public const int UnicodeLetter = 24;
    public const int ExponentPart = 21;
    public const int WhiteSpace = 28;
    public const int T__99 = 99;
    public const int T__98 = 98;
    public const int T__97 = 97;
    public const int T__96 = 96;
    public const int T__95 = 95;
    public const int UnicodeDigit = 25;
    public const int T__80 = 80;
    public const int T__81 = 81;
    public const int NumericLiteral = 7;
    public const int T__82 = 82;
    public const int T__83 = 83;
    public const int IdentifierStart = 22;
    public const int DoubleStringCharacter = 8;
    public const int T__85 = 85;
    public const int T__84 = 84;
    public const int T__87 = 87;
    public const int T__86 = 86;
    public const int T__89 = 89;
    public const int T__88 = 88;
    public const int T__71 = 71;
    public const int T__72 = 72;
    public const int T__70 = 70;
    public const int CharacterEscapeSequence = 11;
    public const int T__76 = 76;
    public const int T__75 = 75;
    public const int T__74 = 74;
    public const int T__73 = 73;
    public const int EscapeSequence = 10;
    public const int T__79 = 79;
    public const int T__78 = 78;
    public const int T__77 = 77;
    public const int T__68 = 68;
    public const int T__69 = 69;
    public const int T__66 = 66;
    public const int T__67 = 67;
    public const int T__64 = 64;
    public const int T__65 = 65;
    public const int T__62 = 62;
    public const int T__63 = 63;
    public const int HexEscapeSequence = 12;
    public const int LineComment = 27;
    public const int T__61 = 61;
    public const int T__60 = 60;
    public const int HexDigit = 18;
    public const int T__55 = 55;
    public const int T__56 = 56;
    public const int T__57 = 57;
    public const int T__58 = 58;
    public const int T__51 = 51;
    public const int T__52 = 52;
    public const int T__53 = 53;
    public const int T__54 = 54;
    public const int T__59 = 59;
    public const int T__103 = 103;
    public const int T__104 = 104;
    public const int EscapeCharacter = 16;
    public const int T__50 = 50;
    public const int IdentifierPart = 23;
    public const int T__42 = 42;
    public const int T__43 = 43;
    public const int T__40 = 40;
    public const int T__41 = 41;
    public const int T__46 = 46;
    public const int T__47 = 47;
    public const int T__44 = 44;
    public const int T__45 = 45;
    public const int T__48 = 48;
    public const int T__49 = 49;
    public const int UnicodeEscapeSequence = 13;
    public const int T__102 = 102;
    public const int T__101 = 101;
    public const int T__100 = 100;
    public const int DecimalLiteral = 19;
    public const int StringLiteral = 6;
    public const int T__30 = 30;
    public const int T__31 = 31;
    public const int T__32 = 32;
    public const int T__33 = 33;
    public const int T__34 = 34;
    public const int T__35 = 35;
    public const int T__36 = 36;
    public const int T__37 = 37;
    public const int T__38 = 38;
    public const int T__39 = 39;
    public const int HexIntegerLiteral = 20;
    public const int NonEscapeCharacter = 15;

    // delegates
    // delegators



        public JavaScriptParser(ITokenStream input)
    		: this(input, new RecognizerSharedState()) {
        }

        public JavaScriptParser(ITokenStream input, RecognizerSharedState state)
    		: base(input, state) {
            InitializeCyclicDFAs();
            this.state.ruleMemo = new Hashtable[380+1];
             
             
        }
        

    override public string[] TokenNames {
		get { return JavaScriptParser.tokenNames; }
    }

    override public string GrammarFileName {
		get { return "JavaScript.g"; }
    }


    public ParserEventHandler EnterFunctionDeclaration;
    public ParserEventHandler LeaveFunctionDeclaration;
    public ParserEventHandler EnterFunctionBody;
    public ParserEventHandler LeaveFunctionBody;
    public ParserEventHandler EnterExpressionStatement;
    public ParserEventHandler LeaveExpressionStatement;
    public ParserEventHandler EnterReturnStatement;
    public ParserEventHandler LeaveReturnStatement;
    public ParserEventHandler EnterIfStatement;
    public ParserEventHandler LeaveIfStatement;
    public ParserEventHandler EnterIterationStatement;
    public ParserEventHandler LeaveIterationStatement;
    public ParserEventHandler EnterSwitchStatement;
    public ParserEventHandler LeaveSwitchStatement;
    public ParserEventHandler EnterBranch;
    public ParserEventHandler LeaveBranch;

    void RaiseEnterFunctionDeclaration(string id)
    {
    	if (EnterFunctionDeclaration != null)
    		EnterFunctionDeclaration(this, new ParserEventArgs(id));
    }
    void RaiseLeaveFunctionDeclaration()
    {
    	if (LeaveFunctionDeclaration != null)
    		LeaveFunctionDeclaration(this, new ParserEventArgs(""));
    }
    void RaiseEnterFunctionBody()
    {
    	if (EnterFunctionBody != null)
    		EnterFunctionBody(this, new ParserEventArgs(""));
    }
    void RaiseLeaveFunctionBody()
    {
    	if (LeaveFunctionBody != null)
    		LeaveFunctionBody(this, new ParserEventArgs(""));
    }
    void RaiseEnterExpressionStatement()
    {
    	if (EnterExpressionStatement != null)
    		EnterExpressionStatement(this, new ParserEventArgs(""));
    }
    void RaiseLeaveExpressionStatement(string text)
    {
    	if (LeaveExpressionStatement != null)
    		LeaveExpressionStatement(this, new ParserEventArgs(text));
    }
    void RaiseEnterReturnStatement()
    {
    	if (EnterReturnStatement != null)
    		EnterReturnStatement(this, new ParserEventArgs(""));
    }
    void RaiseLeaveReturnStatement(string text)
    {
    	if (LeaveReturnStatement != null)
    		LeaveReturnStatement(this, new ParserEventArgs(text));
    }
    void RaiseEnterIfStatement()
    {
    	if (EnterIfStatement != null)
    		EnterIfStatement(this, new ParserEventArgs(""));
    }
    void RaiseLeaveIfStatement()
    {
    	if (LeaveIfStatement != null)
    		LeaveIfStatement(this, new ParserEventArgs(""));
    }
    void RaiseEnterIterationStatement()
    {
    	if (EnterIterationStatement != null)
    		EnterIterationStatement(this, new ParserEventArgs(""));
    }
    void RaiseLeaveIterationStatement()
    {
    	if (LeaveIterationStatement != null)
    		LeaveIterationStatement(this, new ParserEventArgs(""));
    }
    void RaiseEnterSwitchStatement()
    {
    	if (EnterSwitchStatement != null)
    		EnterSwitchStatement(this, new ParserEventArgs(""));
    }
    void RaiseLeaveSwitchStatement()
    {
    	if (LeaveSwitchStatement != null)
    		LeaveSwitchStatement(this, new ParserEventArgs(""));
    }
    void RaiseEnterBranch()
    {
    	if (EnterBranch != null)
    		EnterBranch(this, new ParserEventArgs(""));
    }
    void RaiseLeaveBranch()
    {
    	if (LeaveBranch != null)
    		LeaveBranch(this, new ParserEventArgs(""));
    }



    // $ANTLR start "program"
    // JavaScript.g:119:1: program : ( LT )* sourceElements ( LT )* EOF ;
    public void program() // throws RecognitionException [1]
    {   
        int program_StartIndex = input.Index();
        try 
    	{
    	    if ( (state.backtracking > 0) && AlreadyParsedRule(input, 1) ) 
    	    {
    	    	return ; 
    	    }
            // JavaScript.g:120:2: ( ( LT )* sourceElements ( LT )* EOF )
            // JavaScript.g:120:4: ( LT )* sourceElements ( LT )* EOF
            {
            	// JavaScript.g:120:4: ( LT )*
            	do 
            	{
            	    int alt1 = 2;
            	    int LA1_0 = input.LA(1);

            	    if ( (LA1_0 == LT) )
            	    {
            	        alt1 = 1;
            	    }


            	    switch (alt1) 
            		{
            			case 1 :
            			    // JavaScript.g:0:0: LT
            			    {
            			    	Match(input,LT,FOLLOW_LT_in_program49); if (state.failed) return ;

            			    }
            			    break;

            			default:
            			    goto loop1;
            	    }
            	} while (true);

            	loop1:
            		;	// Stops C# compiler whining that label 'loop1' has no statements

            	PushFollow(FOLLOW_sourceElements_in_program52);
            	sourceElements();
            	state.followingStackPointer--;
            	if (state.failed) return ;
            	// JavaScript.g:120:23: ( LT )*
            	do 
            	{
            	    int alt2 = 2;
            	    int LA2_0 = input.LA(1);

            	    if ( (LA2_0 == LT) )
            	    {
            	        alt2 = 1;
            	    }


            	    switch (alt2) 
            		{
            			case 1 :
            			    // JavaScript.g:0:0: LT
            			    {
            			    	Match(input,LT,FOLLOW_LT_in_program54); if (state.failed) return ;

            			    }
            			    break;

            			default:
            			    goto loop2;
            	    }
            	} while (true);

            	loop2:
            		;	// Stops C# compiler whining that label 'loop2' has no statements

            	Match(input,EOF,FOLLOW_EOF_in_program57); if (state.failed) return ;

            }

        }
        catch (RecognitionException re) 
    	{
            ReportError(re);
            Recover(input,re);
        }
        finally 
    	{
            if ( state.backtracking > 0 ) 
            {
            	Memoize(input, 1, program_StartIndex); 
            }
        }
        return ;
    }
    // $ANTLR end "program"


    // $ANTLR start "sourceElements"
    // JavaScript.g:123:1: sourceElements : sourceElement ( ( LT )* sourceElement )* ;
    public void sourceElements() // throws RecognitionException [1]
    {   
        int sourceElements_StartIndex = input.Index();
        try 
    	{
    	    if ( (state.backtracking > 0) && AlreadyParsedRule(input, 2) ) 
    	    {
    	    	return ; 
    	    }
            // JavaScript.g:124:2: ( sourceElement ( ( LT )* sourceElement )* )
            // JavaScript.g:124:4: sourceElement ( ( LT )* sourceElement )*
            {
            	PushFollow(FOLLOW_sourceElement_in_sourceElements69);
            	sourceElement();
            	state.followingStackPointer--;
            	if (state.failed) return ;
            	// JavaScript.g:124:18: ( ( LT )* sourceElement )*
            	do 
            	{
            	    int alt4 = 2;
            	    alt4 = dfa4.Predict(input);
            	    switch (alt4) 
            		{
            			case 1 :
            			    // JavaScript.g:124:19: ( LT )* sourceElement
            			    {
            			    	// JavaScript.g:124:19: ( LT )*
            			    	do 
            			    	{
            			    	    int alt3 = 2;
            			    	    int LA3_0 = input.LA(1);

            			    	    if ( (LA3_0 == LT) )
            			    	    {
            			    	        alt3 = 1;
            			    	    }


            			    	    switch (alt3) 
            			    		{
            			    			case 1 :
            			    			    // JavaScript.g:0:0: LT
            			    			    {
            			    			    	Match(input,LT,FOLLOW_LT_in_sourceElements72); if (state.failed) return ;

            			    			    }
            			    			    break;

            			    			default:
            			    			    goto loop3;
            			    	    }
            			    	} while (true);

            			    	loop3:
            			    		;	// Stops C# compiler whining that label 'loop3' has no statements

            			    	PushFollow(FOLLOW_sourceElement_in_sourceElements75);
            			    	sourceElement();
            			    	state.followingStackPointer--;
            			    	if (state.failed) return ;

            			    }
            			    break;

            			default:
            			    goto loop4;
            	    }
            	} while (true);

            	loop4:
            		;	// Stops C# compiler whining that label 'loop4' has no statements


            }

        }
        catch (RecognitionException re) 
    	{
            ReportError(re);
            Recover(input,re);
        }
        finally 
    	{
            if ( state.backtracking > 0 ) 
            {
            	Memoize(input, 2, sourceElements_StartIndex); 
            }
        }
        return ;
    }
    // $ANTLR end "sourceElements"


    // $ANTLR start "sourceElement"
    // JavaScript.g:127:1: sourceElement : ( functionDeclaration | statement );
    public void sourceElement() // throws RecognitionException [1]
    {   
        int sourceElement_StartIndex = input.Index();
        try 
    	{
    	    if ( (state.backtracking > 0) && AlreadyParsedRule(input, 3) ) 
    	    {
    	    	return ; 
    	    }
            // JavaScript.g:128:2: ( functionDeclaration | statement )
            int alt5 = 2;
            alt5 = dfa5.Predict(input);
            switch (alt5) 
            {
                case 1 :
                    // JavaScript.g:128:4: functionDeclaration
                    {
                    	PushFollow(FOLLOW_functionDeclaration_in_sourceElement89);
                    	functionDeclaration();
                    	state.followingStackPointer--;
                    	if (state.failed) return ;

                    }
                    break;
                case 2 :
                    // JavaScript.g:129:4: statement
                    {
                    	PushFollow(FOLLOW_statement_in_sourceElement94);
                    	statement();
                    	state.followingStackPointer--;
                    	if (state.failed) return ;

                    }
                    break;

            }
        }
        catch (RecognitionException re) 
    	{
            ReportError(re);
            Recover(input,re);
        }
        finally 
    	{
            if ( state.backtracking > 0 ) 
            {
            	Memoize(input, 3, sourceElement_StartIndex); 
            }
        }
        return ;
    }
    // $ANTLR end "sourceElement"


    // $ANTLR start "functionDeclaration"
    // JavaScript.g:133:1: functionDeclaration : 'function' ( LT )* Identifier ( LT )* formalParameterList ( LT )* functionBody ;
    public void functionDeclaration() // throws RecognitionException [1]
    {   
        int functionDeclaration_StartIndex = input.Index();
        IToken Identifier1 = null;

        try 
    	{
    	    if ( (state.backtracking > 0) && AlreadyParsedRule(input, 4) ) 
    	    {
    	    	return ; 
    	    }
            // JavaScript.g:134:2: ( 'function' ( LT )* Identifier ( LT )* formalParameterList ( LT )* functionBody )
            // JavaScript.g:134:4: 'function' ( LT )* Identifier ( LT )* formalParameterList ( LT )* functionBody
            {
            	Match(input,29,FOLLOW_29_in_functionDeclaration107); if (state.failed) return ;
            	// JavaScript.g:134:15: ( LT )*
            	do 
            	{
            	    int alt6 = 2;
            	    int LA6_0 = input.LA(1);

            	    if ( (LA6_0 == LT) )
            	    {
            	        alt6 = 1;
            	    }


            	    switch (alt6) 
            		{
            			case 1 :
            			    // JavaScript.g:0:0: LT
            			    {
            			    	Match(input,LT,FOLLOW_LT_in_functionDeclaration109); if (state.failed) return ;

            			    }
            			    break;

            			default:
            			    goto loop6;
            	    }
            	} while (true);

            	loop6:
            		;	// Stops C# compiler whining that label 'loop6' has no statements

            	Identifier1=(IToken)Match(input,Identifier,FOLLOW_Identifier_in_functionDeclaration112); if (state.failed) return ;
            	if ( (state.backtracking==0) )
            	{
            	   RaiseEnterFunctionDeclaration(Identifier1.Text); 
            	}
            	// JavaScript.g:134:83: ( LT )*
            	do 
            	{
            	    int alt7 = 2;
            	    int LA7_0 = input.LA(1);

            	    if ( (LA7_0 == LT) )
            	    {
            	        alt7 = 1;
            	    }


            	    switch (alt7) 
            		{
            			case 1 :
            			    // JavaScript.g:0:0: LT
            			    {
            			    	Match(input,LT,FOLLOW_LT_in_functionDeclaration116); if (state.failed) return ;

            			    }
            			    break;

            			default:
            			    goto loop7;
            	    }
            	} while (true);

            	loop7:
            		;	// Stops C# compiler whining that label 'loop7' has no statements
